fixed background span issue led to uneven top and bottom spacing throughout site fixed wrong patches to pages to fix those issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .root {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -12,7 +12,7 @@
 .content {
   height:100%;
   width:80%;
-  margin-top: 300px;
+  margin-top:100px;
   margin-bottom: 200px;
   display: flex;
   flex-direction: column;
