--- a/src/pages/Gallery/gallery.css
+++ b/src/pages/Gallery/gallery.css
@@ -1,3 +1,7 @@
+.App {
+  
+  margin-bottom: 200px;
+}
 .user-item  {
   width: 100%;
   padding: 10px;
